--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,2 +1,27 @@
-<h1>MySQL Results:</h1>
-<p>{{results}}</p>
+<h1>Weights!</h1>
+
+<!-- New Workout Form -->
+
+<div id="table-container">
+    <table>
+        <thead>
+            <tr>
+                <th>Exercise</th>
+
+                <th>Reps</th>
+
+                <th>Weight</th>
+
+                <th>Units</th>
+
+                <th>Date</th>
+
+                <th></th>
+
+                <th></th>
+            </tr>
+        </thead>
+
+        <tbody id="tbody"></tbody>
+    </table>
+</div>
