--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,5 +1,9 @@
 <h1>Weights!</h1>
 
+<div id="error-container">
+    <table id="error-table"></table>
+</div>
+
 <div id="table-container">
     <table>
         <thead>
